--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1652,7 +1652,7 @@ section {
   padding: 12px 15px;
 }
 
-.contact .php-email-form button[type="submit"] {
+button[type="submit"] {
   background: #4154f1;
   border: 0;
   padding: 10px 30px;
@@ -1661,7 +1661,7 @@ section {
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type="submit"]:hover {
+button[type="submit"]:hover {
   background: #5969f3;
 }
 
