--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2368,3 +2368,14 @@ button[type="submit"]:hover {
   font-size: 13px;
   color: #012970;
 }
+
+.list-group{
+  max-height: 300px;
+  margin-bottom: 10px;
+  overflow-y:auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.game-icon img {
+  width: 128px;
+}
