--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2384,11 +2384,15 @@ button[type="submit"]:hover {
 h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #012970;
+  color: inherit;
   text-transform: uppercase;
   position: relative;
-  padding-bottom: 12px;
-  text-align: center;
+  padding-top: 18px;
+  padding-bottom: 10px;
+}
+
+h4 i{
+  float:right;
 }
 
 div.spacer
