--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1288,7 +1288,7 @@ section {
   margin: 40px 30px;
   box-shadow: 0px 0 20px rgba(1, 41, 112, 0.1);
   background: #fff;
-  min-height: 320px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -1305,7 +1305,7 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
+  width: 150px;
   border-radius: 50%;
   border: 4px solid #fff;
   margin: 0 auto;
@@ -2591,7 +2591,6 @@ span.round-tab:hover {
   color: #4154f1;
   transition: none;
   font-size: 16px;
-  font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
@@ -2605,7 +2604,6 @@ span.round-tab:hover {
   color: green;
   transition: none;
   font-size: 16px;
-  font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
@@ -2619,7 +2617,6 @@ span.round-tab:hover {
   color: red;
   transition: none;
   font-size: 16px;
-  font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
@@ -2643,4 +2640,14 @@ h3 {
 #gamers-review-cost {
   float:right;
   font-weight: bold;
+}
+
+#gamers-content-info {
+  white-space: pre;
+  white-space: pre-line;
+}
+
+#creators-content-info {
+  white-space: pre;
+  white-space: pre-line;
 }
