--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Nunito", sans-serif;
 }
 
+h5 {
+  font-weight: bold;
+}
+
 /*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
