--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2668,3 +2668,15 @@ h3 {
 #card-img-top {
   width: 150px;
 }
+
+.stats {
+  height: 150px;
+  font-size:large;
+  font-weight: bold;
+  border: 2px solid #012970;
+  border-radius: 8%;
+  text-align: center;
+  margin: 10px;
+  padding: 40px 0;
+  cursor: pointer;
+}
