--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2680,3 +2680,28 @@ h3 {
   padding: 30px 0;
   cursor: pointer;
 }
+
+.register-buttons {
+  font-size:large;
+  font-weight: bold;
+  border: 2px solid #012970;
+  border-radius: 8%;
+  text-align: center;
+  margin: 10px;
+  padding: 43px 0;
+  cursor: pointer;
+  min-width: 300px;
+  min-height: 250px;
+}
+
+.register-buttons img {
+  height: 150px;
+  margin-bottom: 20px;
+}
+
+.col-12 h1 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: #012970;
+}
